@@ -300,6 +300,8 @@ namespace itpp {
     //! Initialize the generator
     virtual void init() { init_flag = true; }
 
+    using Fading_Generator::generate;
+
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec& output);
   };
@@ -323,6 +325,8 @@ namespace itpp {
 
     //! Initialize the generator
     virtual void init();
+
+    using Fading_Generator::generate;
 
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec& output);
@@ -371,6 +375,8 @@ namespace itpp {
 
     //! Initialize the generator
     virtual void init() = 0;
+
+    using Fading_Generator::generate;
 
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec& output) = 0;
@@ -444,6 +450,8 @@ namespace itpp {
     //! Initialize the generator
     virtual void init();
 
+    using Correlated_Fading_Generator::generate;
+
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec &output);
 
@@ -499,6 +507,8 @@ namespace itpp {
 
     //! Initialize the generator
     virtual void init();
+
+    using Correlated_Fading_Generator::generate;
 
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec &output);
@@ -558,6 +568,8 @@ namespace itpp {
 
     //! Initialize the generator
     virtual void init() { init_flag = true; }
+
+    using Correlated_Fading_Generator::generate;
 
     //! Generate \a no_samples values from the fading process
     virtual void generate(int no_samples, cvec &output);
